✨Implemented service for working with email 🔧Changed root namespace "_3DForge" -> "Backend3DForge"

--- a/3DForge/3DForge.csproj
+++ b/3DForge/3DForge.csproj
@@ -10,7 +10,7 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <SpaProxyServerUrl>https://localhost:44416</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
-    <RootNamespace>_3DForge</RootNamespace>
+    <RootNamespace>Backend3DForge</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
