--- a/3DForge/appsettings.json
+++ b/3DForge/appsettings.json
@@ -1,10 +1,21 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "Services": {
+    "Email": {
+      "EmailAddress": "3d.forgehub@gmail.com",
+      "SenderName": "3D Forge",
+      "Password": "",
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "UseSSL": true,
+      "EmailTemplatesFoulder": "EmailTemplates"
+    }
+  }
 }
