--- a/3DForge/Properties/launchSettings.json
+++ b/3DForge/Properties/launchSettings.json
@@ -1,21 +1,13 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:16131",
-      "sslPort": 44343
-    }
-  },
+{
   "profiles": {
     "_3DForge": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7142;http://localhost:5193",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
-      }
+      },
+      "applicationUrl": "https://localhost:7142;http://localhost:5193"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,6 +16,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:16131",
+      "sslPort": 44343
     }
   }
 }
