--- a/3DForge/appsettings.json
+++ b/3DForge/appsettings.json
@@ -16,6 +16,22 @@
       "Port": 587,
       "UseSSL": true,
       "EmailTemplatesFoulder": "EmailTemplates"
+    },
+    "FTP": {
+      "Username": "3DForge",
+      "Password": "",
+      "Host": "127.0.0.1",
+      "Port": 21,
+      "SFTP": false,
+      "AvatarStoragePath": "Avatars",
+      "PathToFilesToPrint": "FilesToPrint",
+      "PathToPrintedFiles": "PrintedFiles"
+    },
+    "FileSystem": {
+      "RootPath": "Storage",
+      "AvatarStoragePath": "Avatars",
+      "PathToFilesToPrint": "FilesToPrint",
+      "PathToPrintedFiles": "PrintedFiles"
     }
   }
 }
