🔧🙃Fixed avatar loading 🔒Added "Authorize" attribute for required functions

--- a/3DForge/appsettings.json
+++ b/3DForge/appsettings.json
@@ -28,13 +28,13 @@
       "SFTP": false,
       "AvatarStoragePath": "Avatars",
       "PathToFilesToPrint": "FilesToPrint",
-      "PathToPrintedFiles": "PrintedFiles"
+      "PathToPreviewFiles": "PreviewFiles"
     },
     "FileSystem": {
       "RootPath": "Storage",
       "AvatarStoragePath": "Avatars",
       "PathToFilesToPrint": "FilesToPrint",
-      "PathToPrintedFiles": "PrintedFiles"
+      "PathToPreviewFiles": "PreviewFiles"
     }
   }
 }
