✨Added new table "ModelPictures" 🔄️Updated file storage service

--- a/3DForge/appsettings.json
+++ b/3DForge/appsettings.json
@@ -28,13 +28,15 @@
       "SFTP": false,
       "AvatarStoragePath": "Avatars",
       "PathToFilesToPrint": "FilesToPrint",
-      "PathToPreviewFiles": "PreviewFiles"
+      "PathToPreviewFiles": "PreviewFiles",
+      "PathTo3DModelsPictures": "3DModelsPictures"
     },
     "FileSystem": {
       "RootPath": "Storage",
       "AvatarStoragePath": "Avatars",
       "PathToFilesToPrint": "FilesToPrint",
-      "PathToPreviewFiles": "PreviewFiles"
+      "PathToPreviewFiles": "PreviewFiles",
+      "PathTo3DModelsPictures": "3DModelsPictures"
     }
   }
 }
