✨Updated price calculator

--- a/3DForge/appsettings.json
+++ b/3DForge/appsettings.json
@@ -10,6 +10,8 @@
     }
   },
   "AllowedHosts": "*",
+  "MinCost": 200,
+  "ValueAdded": 150,
   "Services": {
     "Email": {
       "EmailAddress": "3d.forgehub@gmail.com",
