🛒Implemented Cart (get/add/remove items). 🔧Fixed default catalog data and other small improvements

--- a/3DForge/appsettings.json
+++ b/3DForge/appsettings.json
@@ -30,6 +30,7 @@
       "SFTP": false,
       "AvatarStoragePath": "Avatars",
       "PathToFilesToPrint": "FilesToPrint",
+      "PathToOrderedModels": "OrderedModels",
       "PathToPreviewFiles": "PreviewFiles",
       "PathTo3DModelsPictures": "3DModelsPictures"
     },
@@ -37,6 +38,7 @@
       "RootPath": "Storage",
       "AvatarStoragePath": "Avatars",
       "PathToFilesToPrint": "FilesToPrint",
+      "PathToOrderedModels": "OrderedModels",
       "PathToPreviewFiles": "PreviewFiles",
       "PathTo3DModelsPictures": "3DModelsPictures"
     }
