Fix publish bug & add https support

--- a/3DForge/3DForge.csproj
+++ b/3DForge/3DForge.csproj
@@ -80,6 +80,24 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="EmailTemplates\confirm_email.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplates\confirm_email_after_registration.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplates\model_acception_notification.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplates\model_deletion_notification.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplates\README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplates\reset_password_permission.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="src\3dModels\forPreview\1.stl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
